--- a/_sass/_home-page.scss
+++ b/_sass/_home-page.scss
@@ -137,7 +137,7 @@
     display: flex;
     flex-wrap: wrap;
     @include outer-container;
-    .promotion,
+    .card,
     .promotion-links {
         width: 100%;
         @media only screen and (min-width: 400/16*1em) {
