ios triangle background fix

--- a/_sass/_mgse-card.scss
+++ b/_sass/_mgse-card.scss
@@ -121,6 +121,7 @@
         display: block;
         width: 0;
         height: 0;
+        background: transparent;
         border-top: 76px solid transparent;
         border-bottom: 0px solid transparent;
         border-right: 280px solid rgba(1,68,126,0.8);
