--- a/css/main.scss
+++ b/css/main.scss
@@ -124,6 +124,7 @@ textarea {
 @import "mgse-comparison";
 @import "mgse-events";
 @import "mgse-card";
+@import "mgse-slider-controls";
 @import "carousel";
 @import "sub-site";
 @import "courses";
