--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html class="no-js" lang="en">
     <head>
-        {% if site.url == 'http://mgse.github.io/' %}
+        {{ site.url }}
+        {% if site.url == 'http://mgse.github.io' %}
           <base href="http://mgse.github.io/mgse-website-prototype-2016/">
         {% endif %}
         <meta charset="utf-8">
