--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,7 @@
 <!doctype html>
 <html class="no-js" lang="en">
     <head>
-        {{ site.url }}
-        {% if site.url == 'http://mgse.github.io' %}
-          <base href="http://mgse.github.io/mgse-website-prototype-2016/">
-        {% endif %}
+        {% if site.url == 'http://mgse.github.io' %}<base href="http://mgse.github.io/mgse-website-prototype-2016/">{% endif %}
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>{{ page.title }} : MGSE</title>
