--- a/_sass/_home-page.scss
+++ b/_sass/_home-page.scss
@@ -79,7 +79,7 @@
     box-shadow: inset  0  12px 8px -8px rgba(0,0,0,0.3), 
                 inset  0 -12px 8px -8px rgba(0,0,0,0.3);
     .content-wrapper {
-        padding: 1em;
+        padding: 1.4em 1em;
     }
     p {
         font-size: 1.2em;
