Fix font sizes to suit font family

--- a/_sass/_mgse-buttons.scss
+++ b/_sass/_mgse-buttons.scss
@@ -40,7 +40,7 @@
     &:after {
         font-family: FontAwesome;
         font-size: 1em;
-        font-weight: bold;
+        font-weight: 700;
         margin: 0 0 0 12px;
         line-height: .5;
         color: #fff;
@@ -51,7 +51,7 @@
 .download.button:before {
     font-family: FontAwesome;
     font-size: 1em;
-    font-weight: bold;
+    font-weight: 700;
     margin: 0 12px 0 0;
     line-height: .5;
     color: #fff;
