--- a/_sass/_mgse-scholarship-summary.scss
+++ b/_sass/_mgse-scholarship-summary.scss
@@ -12,7 +12,7 @@
         padding-right: $gutter/2;
         b {
             color: #6a6a6a;
-            font-weight: normal;
+            font-weight: 400;
         }
     }
     .description {
