--- a/_sass/_mgse-typography.scss
+++ b/_sass/_mgse-typography.scss
@@ -91,7 +91,7 @@ h4 {
 }
 h5 {
     font-size: 0.9 * 1em;
-    font-weight: bold;
+    font-weight: 700;
     line-height: 1.5;
     margin-bottom: 1.5em;
     @include breakpoint (medium-up) {
@@ -106,7 +106,7 @@ h5 {
 }
 h6 {
     font-size: 0.9 * 1em;
-    font-weight: normal;
+    font-weight: 400;
     line-height: 1.5;
     margin-bottom: 1.5em;
     @include breakpoint (medium-up) {
@@ -115,7 +115,7 @@ h6 {
 }
 p {
     font-size: 0.9 * 1em;
-    font-weight: normal;
+    font-weight: 400;
     line-height: 1.618;
     margin: 0 0 1.5em 0;
     word-wrap: break-word;
