--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,7 +23,7 @@
         <script>window.jQuery || document.write('<script src="/js/jquery-1.11.3.min.js"><\/script>')</script>
         
         <!-- MGSE javascript -->  
-        <script src="/js/plugins-min.js"></script>
+        <script src="/js/plugins.js"></script>
         <script src="/js/main.js"></script>
         <script src="/js/banner-roller.js"></script>
 
