make page specific script front matter

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,7 +25,7 @@
         <!-- MGSE javascript -->  
         <script src="/js/plugins.js"></script>
         <script src="/js/main.js"></script>
-        <script src="/js/banner-roller.js"></script>
+        {% if page.pageSpecificScript %}<script src="{{ page.pageSpecificScript }}"></script>{% endif %}
 
     </body>
 </html>
