--- a/_sass/_home-page.scss
+++ b/_sass/_home-page.scss
@@ -112,9 +112,10 @@
 
 .home section {
     .content-wrapper {
+        @include clearfix;
         position: relative;
-        padding: 2em 1em 2em 1em;
-    
+        padding: 2em 0 2em 0;
+        overflow: hidden;
         > h2 {
             text-align: center;
             font-size: 1em;
@@ -143,6 +144,7 @@
     display: flex;
     flex-wrap: wrap;
     @include outer-container;
+    padding: 0 1em 0 1em;/*new*/
     .card,
     .promotion-links {
         width: 100%;
@@ -177,6 +179,7 @@
  */
 .col-4max-cards {
     @include outer-container;
+    padding: 0 1em 0 1em;
     margin-bottom: 2em;
     display: flex;
     flex-wrap: wrap;
@@ -212,6 +215,15 @@
             @include span-columns(3 of 12);
             @include omega(4n);
         }
+    }
+}
+.card-slider {
+	width: 100%;
+	-webkit-transition: all ease-in-out 0.5s;
+    transition: all ease-in-out 0.5s;
+	display: block;
+    .col-4max-cards {
+        float: left;
     }
 }
 
