--- a/_sass/_mgse-card.scss
+++ b/_sass/_mgse-card.scss
@@ -229,7 +229,7 @@
                 justify-content: center;
                 flex-direction: column;
                 border: none;
-                padding: 0.5em 1em 0 1em;
+                padding: 0.5em 1em;
                 &:hover {
                     background: $web-sky-blue;
                 }
