--- a/_sass/_home-page.scss
+++ b/_sass/_home-page.scss
@@ -74,6 +74,9 @@
         }
     }
 }
+.no-js .hero blockquote:first-child {
+    display: block;
+}
 .positioning {
     background: #003268;
     box-shadow: inset  0  12px 8px -8px rgba(0,0,0,0.3), 
@@ -179,7 +182,8 @@
 /*
  * layout container for news and project cards
  */
-.col-4max-cards {
+.col-4max-cards,
+.no-js .card-slider {
     @include outer-container;
     margin-bottom: 2em;
     display: flex;
@@ -218,10 +222,19 @@
         }
     }
 }
-.home .col-4max-cards {
+.home .col-4max-cards,
+.no-js .home .card-slider {
     padding: 0 1em 0 1em;
 }
-.card-slider {
+.no-js .card-slider .card:nth-child(n+5),
+.no-csstransitions .card-slider .col-4max-cards:nth-child(n+2) {
+    /* if javascript disabled or css transistions not supported (ie9), only show first four project cards */
+    display: none;
+}
+.csstransitions .card-slider {
+    /* use modernizr to see if css transitions are supported, 
+     * if yes then JavaScript is on and browser supports transistions, so show controls
+     */
 	width: 100%;
 	-webkit-transition: all ease-in-out 0.5s;
     transition: all ease-in-out 0.5s;
@@ -234,12 +247,6 @@
 /*
  * Homepage nav
  */
-.home h3 a {
-    border-bottom: none;
-        &:hover {
-            border-bottom: 1px solid #0072c9;
-        }
-}
 #main-content .home-in-page-nav {
     @include breakpoint(medium-only-portrait-up) {
         @include span-columns(9 of 12);
@@ -249,6 +256,12 @@
     }
     h3 {
         border-bottom: 2px solid #2D71B3;
+        a {
+            border-bottom: none;
+            &:hover {
+                border-bottom: 1px solid #0072c9;
+            }
+        }
     }
     li {
         padding-left: 1em;
@@ -278,27 +291,6 @@
 #main-content .home-in-page-nav:last-child {
     margin-right: auto;
 }
-#main-content .home-side-bar {
-    @include breakpoint(medium-only-portrait-up) {
-        clear: none;
-        @include span-columns(3 of 12);
-        @include omega();
-    }
-    h3 {
-        border-bottom: 2px solid #2D71B3;
-    }
-    .news-wrap {
-        margin: 1em 0;
-        border-bottom: 1px solid #BFCCE2;
-        a {
-            border-bottom: none;
-            &:hover {
-                border-bottom: 1px solid #0072c9;
-            }
-        }
-        .time-stamp {
-            text-transform: uppercase;
-            font-size: 0.732em;
-        }
-    }
+.no-js #main-content .home-in-page-nav {
+    display: none;
 }
