--- a/_sass/_mgse-card.scss
+++ b/_sass/_mgse-card.scss
@@ -62,9 +62,12 @@
     }
     h2, h3 {
         font-weight: 400;
-        font-size: 18/16*1em;
+        font-size: 1em;
         margin-bottom: 0.8em;
         line-height: 1.4;
+        @media only screen and (min-width: 400/16*1em) {
+            font-size: 18/16*1em;
+        }
     }
     p {
         font-size: 0.9 * 1em;
