remove muse from sass filenames

--- a/css/main.scss
+++ b/css/main.scss
@@ -101,30 +101,30 @@ textarea {
 @import "bourbon/bourbon", "neat/neat";
 @import "global-header-footer-fix";
 @import "settings";
-@import "mgse-base";
-@import "mgse-header";
-@import "mgse-footer";
-@import "mgse-main-nav";
-@import "mgse-layout";
-@import "mgse-navigation";
-@import "mgse-typography";
+@import "base";
+@import "header";
+@import "footer";
+@import "main-nav";
+@import "layout";
+@import "navigation";
+@import "typography";
 /* === COMPONENTS === */
-@import "mgse-buttons";
-@import "mgse-tables";
-@import "mgse-figures";
-@import "mgse-video";
-@import "mgse-wells";
-@import "mgse-content-promo";
-@import "mgse-tabs";
-@import "mgse-accordion";
-@import "mgse-readmore";
-@import "mgse-profile";
-@import "mgse-scholarship-summary";
-@import "mgse-alert";
-@import "mgse-comparison";
-@import "mgse-events";
-@import "mgse-card";
-@import "mgse-slider-controls";
+@import "buttons";
+@import "tables";
+@import "figures";
+@import "video";
+@import "wells";
+@import "content-promo";
+@import "tabs";
+@import "accordion";
+@import "readmore";
+@import "profile";
+@import "scholarship-summary";
+@import "alert";
+@import "comparison";
+@import "events";
+@import "card";
+@import "slider-controls";
 @import "carousel";
 @import "sub-site";
 @import "courses";
