include card script within main.js

--- a/_sass/_card.scss
+++ b/_sass/_card.scss
@@ -71,6 +71,7 @@
     }
     p {
         font-size: 0.9 * 1em;
+        max-width: 100%;
     }
     &.highlight {
         background: $web-sky-blue;
