--- a/_sass/_home-page.scss
+++ b/_sass/_home-page.scss
@@ -15,7 +15,7 @@
     display: none;
     @media only screen and (min-width: 600px) {
         display: block;
-        background: url('/img/home-hero.jpg') no-repeat center;
+        background: url('//education.unimelb.edu.au/__data/assets/image/0011/2220041/home-hero.jpg') no-repeat center;
         background-size: cover;
     }
     .content-wrapper {
