--- a/css/main.scss
+++ b/css/main.scss
@@ -125,7 +125,7 @@ textarea {
 @import "events";
 @import "card";
 @import "slider-controls";
-@import "carousel";
+// @import "carousel"; pre-2017 homepage
 @import "sub-site";
 @import "courses";
 @import "breadth";
