--- a/_sass/_card.scss
+++ b/_sass/_card.scss
@@ -294,6 +294,7 @@
         .when {
             font-size: 18/16*1em;
             margin: 0;
+            line-height: 1.4;
         }
         time {
             display: block;
