--- a/css/main.scss
+++ b/css/main.scss
@@ -111,6 +111,7 @@ textarea {
 /* === COMPONENTS === */
 @import "buttons";
 @import "tables";
+@import "fees-info";
 @import "figures";
 @import "video";
 @import "wells";
