--- a/_sass/_alert.scss
+++ b/_sass/_alert.scss
@@ -10,6 +10,7 @@
     padding: 20px;
     box-shadow: 0 1px 3px 0 #d4d4d5,0 0 0 1px #d4d4d5;
 }
-.side-bar .alert {
+.side-bar .alert,
+.side-bar.alert {
     margin: 0 auto 2em auto;
 } 
