--- a/_sass/_card.scss
+++ b/_sass/_card.scss
@@ -286,6 +286,9 @@
             text-align: center;
         }
     }
+    &.external:after {
+        background: transparent;
+    }
 }
 .event.card {
     header {
@@ -316,6 +319,26 @@
             }
         }
     }
+    /*&.spotlight {
+        footer:after {
+            content: 'Spotlight';
+            position: absolute;
+            bottom: 3px;
+            left: 0px;
+            color: #fff;
+            //background: $web-blue;
+            padding: $gutter/2 2*$gutter $gutter/2 $gutter/2;
+            font-size: 0.75em;
+            text-transform: uppercase;
+            background-image: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSI0MzMiIGhlaWd
+odD0iMTEzIiB2aWV3Qm94PSIwIDAgNDMzLjUgMTEzLjQiPjxyZWN0IHdpZHRoPSI0MzMuNSIgaG
+VpZ2h0PSIxMTMuNCIgZmlsbD0iI0ZGRiIvPjxwb2x5Z29uIHBvaW50cz0iNDMzLjUgMTEzLjQgM
+CAxMTMuNCAwIDAgNDMzLjUgMCAzNzQuNiA1Ni43ICIgZmlsbD0iIzAxNTY5NyIvPjwvc3ZnPg==");
+            background-size: contain;
+            background-repeat: no-repeat;
+            background-position: right center;
+        }
+    }*/
 }
 /*
  * project cards
