--- a/css/main.scss
+++ b/css/main.scss
@@ -126,6 +126,7 @@ textarea {
 @import "events";
 @import "card";
 @import "slider-controls";
+@import "pagination";
 // @import "carousel"; pre-2017 homepage
 @import "sub-site";
 @import "courses";
